# Maxwell

./: CMakeLists.txt  main.c
boring/: 1.c  2.c  3.c  CMakeLists.txt  Fibonacci.c  NP.c  Quine.c  Quine0.c  a.c  a_add_b.c  a_add_b0.c  bub.c  count_primes.c  exp.c  experience.c  factorial.c  forfun.h  function.c  n.c  prime.c  prime_2.c  primes0.c  primes1.c  sizeof.c
boring_0/: CMakeLists.txt  Hong.c  Hong1.c  Hong2.c  Hong3.c  Quine0.c  bor.c  cube.c  decomposition.c  decomposition0.c  ptr_0.c  quine.c  random.c  saierhao.c  stream.c  sudoku.c  sudoku0.c  super.c
boring_0/Hong/: CMakeLists.txt  Hong0.c  Hong1.c  Hong10.c  Hong4.c  Hong5.c  Hong6.c  Hong6.txt  Hong7.c  Hong8.c  Hong9.c  test
boring_0/dir/: CMakeLists.txt  dir.c
boring_2/: 0.c  18  4.c  AppAndPpa.c  CMakeLists.txt  as.c  fact.c  hg.c  hong.c  ptr.c  quine.c  quine0.c  quine1.c  quine3.c  re.c  xulie.c
class2/: 10_class.c  11_class.c  3-class.c  4-class.c  5-class.c  6-class.c  7-class.c  8-class.c  9-class.c  CMakeLists.txt  class2.c  class3.c
class2/ll/: ll.c  ll.h
computing/: 5.7.17.c  6.19.c  6.20.c  7a.c  A+B.c  CMakeLists.txt  delete.c
exam/: CMakeLists.txt  bsearch.c  bubble-sort.c  bubble.c  checker.c  gobang.c  hgu.txt  lineup.c  sorted.c
homework/1-homework/: ASCII.c  CMakeLists.txt  Equation.c  Gravity.c  Julian.c  inverse.c  pi.c  pi2.c  ruanmei.c  time.c
homework/10_homework/: CMakeLists.txt  buddy0.c  fifa.c  file-management.c  polynlist.c  string-hash.c
homework/3-homework/: CMakeLists.txt  Quick-sort.c  decimal.c  flip.c  flip2.c  gaoxiao.c  jusephus.c  palindrome.c  statistics.c
homework/4_homework/: CMakeLists.txt  life.c  matrix-mult.c  mines.c  sudoku.c  trace.c
homework/5_homework/: CMakeLists.txt  absolute_prime.c  behaviors.c  magic-square.c  next-permutation.c  radix.c  sum.c
homework/6_homework/: CMakeLists.txt  integration.c  max.c  pascal.c  poi.c  tiles.c  triangle.c
homework/7_homework/: brackets.c  buddy.c  cuboid.c  pour.c  rotate.c  wine.c
homework/8_homework/: interpreter.c  substr.c  title.c
homework/9_homework/: CMakeLists.txt  parse.c  stringcat.c  tokenizer.c
homework/homework2/: CMakeLists.txt  collatz.c  factorial.c  inverse2.c  obstacel.c  series.c  single.c
