cmake_minimum_required(VERSION 3.22.1)
project(untitled C)
add_subdirectory(homework/1-homework)
add_subdirectory(class2)
add_subdirectory(homework/homework2)
add_subdirectory(boring)
add_subdirectory(homework/3-homework)
add_subdirectory(computing)
add_subdirectory(homework/4_homework)
add_subdirectory(homework/5_homework)
add_subdirectory(homework/6_homework)
add_subdirectory(homework/7_homework)
add_subdirectory(homework/8_homework)
add_subdirectory(homework/9_homework)
add_subdirectory(boring_2)
add_subdirectory(boring_0)
add_subdirectory(homework/10_homework)
add_subdirectory(exam)