add_executable(n n.c)
add_executable(function function.c)
add_executable(experience experience.c)
add_executable(prime prime.c)
add_executable(prime_2 prime_2.c)
include_directories(${PROJECT_BINARY_DIR}/boring)
add_executable(a a.c)
add_executable(1 1.c)
add_executable(NP NP.c)
add_executable(exp exp.c)
add_executable(Fibonacci Fibonacci.c)
add_executable(2 2.c)
add_executable(3 3.c)
add_executable(sizeof sizeof.c)
add_executable(bub bub.c)