add_executable(n n.c)
add_executable(function function.c)
add_executable(experience experience.c)
add_executable(prime prime.c)
add_executable(prime_2 prime_2.c)
include_directories(${PROJECT_BINARY_DIR}/boring)
add_executable(a0 a.c)
add_executable(1 1.c)
add_executable(NP NP.c)
add_executable(exp exp.c)
add_executable(Fibonacci Fibonacci.c)
add_executable(2 2.c)
add_executable(3 3.c)
add_executable(sizeof sizeof.c)
add_executable(bub bub.c)
add_executable(primes0 primes0.c)
add_executable(primes1 primes1.c)
add_executable(count_primes count_primes.c)
add_executable(Quine Quine.c)
add_executable(Quine0 Quine0.c)
add_executable(factorial0 factorial.c)
add_executable(a_add_b a_add_b.c)
add_executable(a_add_b0 a_add_b0.c)