add_executable(bor bor.c)
target_link_libraries(bor mingw32)
target_link_libraries(bor SDL2main)
target_link_libraries(bor SDL2)
target_link_libraries(bor SDL2_image)
target_link_libraries(bor SDL2_ttf)
add_executable(ptr_0 ptr_0.c)
add_executable(random random.c)
add_executable(stream stream.c)
add_executable(Hong Hong.c)
add_executable(Hong0 Hong0.c)
add_executable(Hong1 Hong1.c)
add_executable(Hong2 Hong2.c)
add_executable(Hong3 Hong3.c)
add_executable(Hong4 Hong4.c)