add_executable(bor bor.c)
target_link_libraries(bor mingw32)
target_link_libraries(bor SDL2main)
target_link_libraries(bor SDL2)
target_link_libraries(bor SDL2_image)
target_link_libraries(bor SDL2_ttf)
add_executable(ptr_0 ptr_0.c)
add_executable(random random.c)
add_executable(stream stream.c)
add_subdirectory(Hong)