add_executable(hong hong.c)
add_executable(AppAndPpa AppAndPpa.c)
add_executable(re re.c)
add_executable(hg hg.c)
add_executable(ptr ptr.c)
add_executable(as as.c)
add_executable(0 0.c)
add_executable(4 4.c ../class2/ll/ll.c)
add_executable(quine0 quine.c)
add_executable(quine1 quine0.c)
add_executable(quine2 quine1.c)
add_executable(quine3 quine3.c)
add_executable(fact fact.c)
add_executable(xulie xulie.c)