add_executable(class2 class2.c)
add_executable(class3 class3.c)
add_executable(3-class 3-class.c)
add_executable(4-class 4-class.c)
add_executable(5-class 5-class.c)
add_executable(6-class 6-class.c)
add_executable(7-class 7-class.c)
add_executable(8-class 8-class.c)
add_executable(9-class 9-class.c)
add_executable(10_class 10_class.c)
add_executable(11_class 11_class.c ll/ll.c ll/ll.h)