add_executable(Hong Hong.c)
add_executable(Hong0 Hong0.c)
add_executable(Hong1 Hong1.c)
add_executable(Hong2 Hong2.c)
add_executable(Hong3 Hong3.c)
add_executable(Hong4 Hong4.c)
add_executable(Hong5 Hong5.c)
add_executable(Hong6 Hong6.c)
add_executable(Hong7 Hong7.c)
add_executable(Hong8 Hong8.c)
add_executable(Hong9 Hong9.c)
add_executable(Hong10 Hong10.c)