add_executable(ruanmei ruanmei.c)
add_executable(pi pi.c)
target_link_libraries(pi m)
add_executable(pi2 pi2.c)
target_link_libraries(pi2 m)
add_executable(time time.c)
add_executable(ASCII ASCII.c)
add_executable(inverse inverse.c)
add_executable(Gravity Gravity.c)
add_executable(Julian Julian.c)
add_executable(Equation Equation.c)